syntax = "proto3";

package api;

message TestReq {
  int32 id = 1;
}
message TestResp {}

service EventsService {
  rpc createEvent(TestReq) returns (TestResp);
}
